// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/drafts/drafts_row should match snapshot for channel draft 1`] = `
<ContextProvider
  value={
    Object {
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": Subscription {
        "handleChangeWrapper": [Function],
        "listeners": Object {
          "notify": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": null,
      },
    }
  }
>
  <Memo(ThreadDraft)
    channel={
      Object {
        "id": "",
      }
    }
    channelUrl=""
    displayName=""
    draftId=""
    id={Object {}}
    isRemote={false}
    rootId=""
    status={Object {}}
    thread={
      Object {
        "id": "",
      }
    }
    type="thread"
    user={Object {}}
    value={Object {}}
  />
</ContextProvider>
`;

exports[`components/drafts/drafts_row should match snapshot for undefined thread 1`] = `
<ContextProvider
  value={
    Object {
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": Subscription {
        "handleChangeWrapper": [Function],
        "listeners": Object {
          "notify": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": null,
      },
    }
  }
>
  <Memo(ThreadDraft)
    channel={
      Object {
        "id": "",
      }
    }
    channelUrl=""
    displayName=""
    draftId=""
    id={Object {}}
    isRemote={false}
    rootId=""
    status={Object {}}
    thread={null}
    type="thread"
    user={Object {}}
    value={Object {}}
  />
</ContextProvider>
`;
